Referências que faltaram - pep

--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -183,3 +183,48 @@ title = {LIKWID: A lightweight performance-oriented tool suite for x86 multicore
 year = {2010},
 address = {San Diego CA},
 }
+
+@article{Orgerie2014,
+author = {Orgerie, Anne-Cecile and de Assuncao, Marcos Dias and Lefevre, Laurent},
+doi = {10.1145/2532637},
+issn = {0360-0300},
+journal = {ACM Comput. Surv.},
+keywords = {Energy efficiency,Networking,computing,distributed systems},
+number = {4},
+pages = {47:1--47:31},
+title = {{A Survey on Techniques for Improving the Energy Efficiency of Large-scale Distributed Systems}},
+volume = {46},
+year = {2014}
+}
+
+@article{SilveiraAndMoro,
+author = {Silveira, Dieison S and Moro, Gabriel B and Cruz, Eduardo H. M. and Navaux, Philippe O A and Schnorr, Lucas Mello and Bampi, Sergio},
+title = {{Energy Consumption Estimation in Parallel Applications: an Analysis in Real and Theoretical Models}},
+year = {2016},
+publisher = {WSCAD 2016 - XVII Simpósio em Sistemas Computacionais de Alto Desempenho},
+pages = {134--145}
+}
+
+@article{Sueur2010,
+author = {Sueur, E L and Heiser, G},
+journal = {Proceedings of the 2010 international conference on Power aware computing and systems},
+pages = {1--8},
+title = {{Dynamic voltage and frequency scaling: the laws of diminishing returns}},
+year = {2010}
+}
+
+
+@misc{Wiki2012,
+    author = {Wiki, Texas Instruments},
+    title = {{DVFS User Guide}},
+    url ={http://processors.wiki.ti.com/index.php/DVFS_User_Guide},
+    year = {2012}
+}
+
+@misc{KernelDocumentacao,
+    author = {Brodowski, Dominik and Golde, Nico},
+    title = {{CPU frequency and voltage scaling code in the Linux(TM) kernel}},
+    url ={https://www.kernel.org/doc/Documentation/cpu-freq/governors.txt},
+    year = {2016}
+}
+
