--- a/LabBook.org
+++ b/LabBook.org
@@ -4485,3 +4485,35 @@ THREAD_JOI 0 2750384027928552 Model OpenMP
 	- Qual melhor formato de trace nesse tipo de situação?
 	- Devo considerar o que ocorre antes|depois do fork da aplicação?
 	- Como posso fazer para diminuir os traces gerados?
+* [11:04:55; 25.10.2016] Como posso diminuir os traces gerados pelo scorep? :Gabriel:
+- Conversando com o Guilherme Camelo, ele me mostrou um recurso do
+  Scorep que permite realizar um filtro no trace.otf2. De acordo com o
+  que preciso, o arquivo de filtro é da seguinte maneira:
+
+#+BEGIN_EXAMPLE
+SCOREP_REGION_NAMES_BEGIN
+EXCLUDE *
+INCLUDE PAPI OPENMP
+INCLUDE multiplica transpose
+SCOREP_REGION_NAMES_END
+#+END_EXAMPLE
+
+- O arquivo de filtro que defini inclui apenas regiões aonde a métrica
+  PAPI foi utilizada e também as diretivas OpenMP, além disso, inclui
+  os trechos de código que são as funções (nosso grão) do programa a
+  serem analisadas.
+
+- Para o Scorep reconhecer esse filtro é necessário utilizar além das
+  configurações de variáveis de ambiente já declaradas a que aponta
+  para o arquivo de filtro. Assim, as variáveis ficariam da seguinte
+  maneira:
+
+#+BEGIN_EXAMPLE
+SCOREP_ENABLE_PROFILING=true \
+SCOREP_ENABLE_TRACING=true \
+SCOREP_TOTAL_MEMORY=3G \
+SCOREP_METRIC_PAPI=PAPI_L2_TCA,PAPI_L2_DCM,PAPI_L2_ICM \
+SCOREP_METRIC_RUSAGE=ru_utime,ru_stime \
+SCOREP_FILTERING_FILE=/home/gabrielbmoro/src/bestSolution/filter_timestemp \
+./program_exec 
+#+END_EXAMPLE
