--- a/producao/pep/Dissertation.org
+++ b/producao/pep/Dissertation.org
@@ -284,21 +284,26 @@ DVFS), como também a nível de software, utilizando técnicas de
 balanceamento de carga, a fim de melhor distribuir a computação entre
 os recursos de processamento.
 
+#+Latex: \review{Definir o que é DVFS! Dynamic Voltage and Frequency Scaling. Traduzindo: Mudança dinâmica de voltagem e frequência.}
+
 Uma aplicação possui aspectos peculiares, os quais definem seu tipo,
-modelo e demais características de processamento. Além dessas
+modelo e demais características de processamento. 
+#+Latex: \review{Não entendi o que quis dizer por "aspectos peculiares".}
+Além dessas
 características influenciarem o comportamento de uma aplicação, a
 plataforma de execução influencia diretamente no seu
-comportamento. Aplicações memory-bound é uma classe de aplicações
+comportamento. Aplicações \review{do tipo} memory-bound é 
+#+Latex: \review{são!  (favor revisar a concordância de todas as tuas frases. Isso é o mínimo de qualidade a ser exigido de qualquer texto.}
+uma classe de aplicações
 que possui alta taxa de cache misses, fazendo com que essas
 aplicações sejam limitadas pelo acesso a memória em alguns trechos de
-execução. Outras aplicações, realizam mais processamento e acessam a
+execução. Outras aplicações, 
+#+Latex: \review{Aqui tu separas o sujeito do verbo com a vírgula. Isso não existe em português. Daqui para frente vou me limitar a comentários técnicos e científicos. Deixo para tu resolver teus problemas de escrita em português. Veja marcações "!!".}
+realizam mais processamento e acessam a
 memória menos vezes, como é o caso das aplicações mais CPU-bound que
 possuem um 
-IPC (
-#+BEGIN_LaTeX
-\textit{Instruction Per Cycle}
-#+END_LaTeX
-) maior.
+IPC (/Instructions Per Cycle/) maior.
+#+Latex: \review{Traduzir para português (veja que é instruções e não instrução): instruções por ciclo}
 
 As regiões paralelas de uma aplicação são executadas por threads
 distintas. Por exemplo, em uma aplicação que simula a troca de calor
@@ -309,28 +314,32 @@ dos diferentes pontos. Nesse exemplo é possível visualizar que, a segunda
 região é mais memory-bound do que a outra, pois é efetuado o mesmo
 cálculo sobre diferentes dados, dessa forma, o registro da informação
 é realizado e buscado antes do novo cálculo
-\cite{Morowsppd}. Portanto, em uma aplicação é possível ter diferentes
+\cite{Morowsppd}. 
+#+Latex: \review{Não ficou claro para mim o que tu quis dizer com "realizado e buscado"}
+Portanto, em uma aplicação é possível ter diferentes
 comportamentos em uma granularidade mais fina, compreendendo o
 comportamento das diferentes regiões da aplicação. O objetivo do
 trabalho é detectar as regiões memory-bound de aplicações paralelas de
 maneira automática, em uma granularidade refinada, diferente das
-abordagens investigadas, de maneira que possa ser realizado ajustes de
+abordagens investigadas,
+#+Latex: \review{Quais abordagens investigadas?}
+ de maneira que possa ser realizado ajustes de
 frequência de processador utilizando a técnica 
-DVFS ( 
-#+BEGIN_LaTeX
-\textit{Dynamic Voltage and Frequency Scaling}
-#+END_LaTeX
-) para reduzir o consumo de energia nas fases mais memory-bound da
+DVFS (/Dynamic Voltage and Frequency Scaling/)
+ para reduzir o consumo de energia nas fases mais memory-bound da
 aplicação.
+#+Latex: \review{memory-bound poderia ser traduzido já que tu usas de maneira recorrente.}
 
 O presente trabalho está organizado da seguinte maneira: no capítulo 2
-será apresentado os conceitos básicos utilizados em nossa abordagem;
+será \review{!!} apresentado os conceitos básicos utilizados em nossa abordagem;
 já no capítulo 3 é investigado o estado da arte com vários trabalhos que
 contribuem diretamente para essa pesquisa; o capítulo 4 apresenta os
 experimentos realizados e alguns resultados preliminares do trabalho;
-e no capítulo 5 é apresentado as conclusões do trabalho, como também
+e no capítulo 5 é apresentado \review{!!} as conclusões do trabalho, como também
 os próximos passos da pesquisa e cronograma de atividades que serão
 realizadas no decorrer do mestrado.
+
+#+Latex: \review{Sinto que faltou falar dos trabalhos relacionados, pelo menos um parágrafo dizendo o que já foi feito na área e o que tu propõem de diferente seria ideal. Isso depois é detalhado no estado da arte, mas acho bom tu colocares aqui também como forma de motivar do ponto de vista científico o teu trabalho.}
 
 * Conceitos Básicos
 \label{chapter.basic_concepts}
@@ -349,6 +358,9 @@ de tipo: Fork-join, Stencil, Mapeamento e Redução.
 
 *** Fork-join
 
+\review{Tu podes colocar em itálico simplesmente usando /barras/, veja}
+\to /barras/
+
 O modelo Fork-join consiste em um processo que dispara várias threads
 (
 #+BEGIN_LaTeX
@@ -357,12 +369,15 @@ O modelo Fork-join consiste em um processo que dispara várias threads
 ), após essa divisão, geralmente ocorre um processamento
 específico em cada thread (abordagem muito usada em Pthreads) ou um
 processamento similar, sobre diferentes dados (abordagem mais usada em
-OpenMP) \cite{pacheco2011introduction}. Algoritmos que utilizam a
+OpenMP) \cite{pacheco2011introduction}
+#+Latex: \review{Do ponto de vista conceitual, Pthreads e OpenMP (somente for) são idênticos. Então considero errado o que tu escreveu nesta frase.} 
+. Algoritmos que utilizam a
 abordagem de divisão e conquista, como por exemplo o algoritmo
 Merge-sort, fazem uso do modelo Fork-join. Na Figura
 \ref{fig.fork-join} é possível visualizar um exemplo de Fork-join, um
 processo que inicializa duas threads, nessa computação podemos
-visualizar a utilização de três fluxos de execução em paralelo.
+visualizar a utilização de três fluxos de execução em paralelo 
+#+latex: \review{Tu fala de três, mas na figura está escrito só de dois.}.
 
 #+BEGIN_LaTeX
 \begin{figure}[!htb]
@@ -376,7 +391,8 @@ visualizar a utilização de três fluxos de execução em paralelo.
 *** Stencil
 
 Aplicações do tipo Stencil realizam o processo de convolução para
-obter um novo resultado para determinado elemento da matriz, levando
+obter um novo resultado para determinado elemento da matriz
+\review{que matriz?}, levando
 em consideração suas células vizinhas \cite{Roth1997}. Muitas
 dependências podem ocorrer nesse tipo de abordagem, o que torna esse
 tipo de aplicação mais complexa do ponto de vista de implementação.  
@@ -387,10 +403,13 @@ chamada de matriz de convolução e a partir dela é realizado o cálculo
 sobre cada elemento da matriz base, que por sua vez é a matriz
 original que representa a imagem tratada pela aplicação. Nesse exemplo
 é possível visualizar uma dependência muito comum, quando a célula
-compor uma borda da matriz, faltará alguns vizinhos para
+compor uma borda da matriz, faltará \review{!!} alguns vizinhos para
 realizar o cálculo. Dependendo do cálculo que está sendo realizado e
 do algoritmo, a solução para o problema das bordas pode ser a
-duplicação das mesmas ou o preenchimento com um valor constante. 
+duplicação das mesmas
+#+latex: \review{Com assim duplicação?} 
+ou o preenchimento com um valor constante
+#+Latex: \review{Isso não faz o resultado ser errado?}. 
 
 *** Mapeamento
 
@@ -421,6 +440,8 @@ for(i=0;i < size; i++) {
 \end{lstlisting}
 
 #+END_LaTeX
+
+#+Latex: \review{O que isso difere de fork-join?}
 
 A abordagem tradicional de multiplicação de matrizes utiliza três
 laços aninhados, o primeiro que percorre as linhas da matriz, o mais
@@ -504,7 +525,7 @@ relacionado diretamente com o tipo de aplicação a ser paralelizada,
 por exemplo, em uma aplicação Stencil, o balanceamento de carga pode
 ser a divisão da matriz base utilizada pela aplicação, assim cada
 processo/thread atuará sobre determinadas regiões da mesma matriz
-base. Outra abordagem de balanceamento de carga para uma aplicação
+base \review{Frase grande!}. Outra abordagem de balanceamento de carga para uma aplicação
 Stencil, poderia ser a divisão das iterações realizadas sobre
 determinado elemento da matriz. 
 
@@ -514,6 +535,7 @@ O balanceamento de carga estático leva em consideração um conhecimento
 prévio da plataforma de execução (características de máquina) e da
 aplicação. A divisão da carga de trabalho ocorre antes da computação,
 fazendo com que esse tipo de técnica possua um 
+#+latex: \review{sobrecarga é tradução de overhead}
 #+BEGIN_LaTeX
 \textit{overhead}
 #+END_LaTeX
@@ -528,7 +550,7 @@ a carga é conhecida, nesse problema é possível obter um bom desempenho
 com esse tipo de escalonador, visto que cada thread receberá um número
 de iterações a serem realizadas sobre determinadas partes da matriz,
 as quais são configuradas pelas variáveis privadas em que cada thread
-realizará o seu trabalho. 
+realizará o seu trabalho.  \review{frase longa}
 
 #+LaTeX: \lstset{language=C,caption={Uso de balanceamento estático em OpenMP.} ,label=lst.static}
 #+BEGIN_LaTeX
@@ -557,12 +579,14 @@ mudanças da aplicação e da plataforma de execução, qual é a melhor
 opção de balanceamento para melhorar o desempenho da aplicação
 \cite{Li2005}. 
 
-O conjunto de Mandelbrot é um exemplo de algoritmo onde ocorre um
+O conjunto de Mandelbrot é um exemplo de algoritmo onde
+#+latex: \review{é necessário (ocorre somente se alguém o fizer)}
+ocorre um
 balanceamento dinâmico. Esse algoritmo consiste no cálculo de
 quais pontos do plano fazem parte do conjunto de Mandelbrot, em cada
 ponto do plano (imagem) são realizados vários cálculos, com várias
 iterações, fazendo com que a carga seja desbalanceada entre as threads
-\cite{chandra2001parallel}. 
+\cite{chandra2001parallel}. \review{frase grande}
 
 ** Comportamentos de Aplicações
 
@@ -570,28 +594,39 @@ O comportamento de uma aplicação está relacionado diretamente com a
 abordagem da aplicação, por exemplo, um algoritmo de multiplicação de
 vetores é diferente de um algoritmo de busca em grafos. Ambos
 algoritmos possuem entrada, processamento e saída, mas o núcleo é
-diferente, porque realizam processamentos distintos. O algoritmo de
-busca em grafos, por exemplo, possui um comportamento mais
-memory-bound, do que o algoritmo de multiplicação de vetores, pois
+diferente, porque realizam processamentos distintos 
+#+latex: \review{Me parece óbvio demais.}
+. O algoritmo de busca em grafos, por exemplo, possui um comportamento
+mais memory-bound do que o algoritmo de multiplicação de vetores, pois
 quando é realizado uma busca em grafos, por determinado nó, ocorre
 vários misses de cache, fazendo com que o algoritmo acesse a memória
-principal várias vezes. Diferente do que ocorre no algoritmo de
-multiplicação de vetores, aonde os dados estão mais bem localizados na
+principal várias vezes 
+#+latex: \review{Seria bom colocar uma evidência para suportar teu argumento. Uma citação ou um gráfico que mostre isso.}
+. Diferente do que ocorre no algoritmo de
+multiplicação de vetores, aonde os dados estão mais bem localizados 
+#+latex: \review{o que é estar "mais bem localizado"?}
+ na
 memória cache, pela estrutura de dados utilizada ser um vetor e a
 leitura dos elementos ser realizada de maneira sequencial, os dados
 permitem que a busca na memória principal ocorra menos vezes, pelo
-princípio da localidade. 
+princípio da localidade.
 
 \citeonline{jesshope2006advances} definem que as aplicações memory-bound 
 são aquelas que o desempenho aumenta a medida que for reduzido a taxa de 
 cache misses para o segundo nível de cache (cache L2). Diferente disso, nas 
-aplicações non-memory-bound não ocorre o aumento de desempenho a medida 
+aplicações non-memory-bound
+#+latex: \review{Não memory-bound, ou simplesmente CPU-bound (se não for IO-bound).}
+ não ocorre o aumento de desempenho a medida 
 que a taxa de cache misses diminui. Uma das maneiras de medir esse 
 comportamento é a partir de contadores de hardware, os quais informam a 
-quantidade de acessos aos níveis de cache, memória principal, a taxa de hit 
+quantidade de acessos aos níveis de cache, memória principal, a taxa
+de hit  
+#+latex: \review{hit seria acerto.}
 nas memórias, a quantidade de instruções executadas e assim por diante.
 
-Além da taxa de misses para o segundo nível de cache para definir o 
+Além da taxa de misses 
+#+latex: \review{traduzir misses?}
+para o segundo nível de cache para definir o 
 comportamento de uma aplicação, também é possível utilizar a 
 métrica IPC (
 #+BEGIN_LaTeX
@@ -617,7 +652,9 @@ ou CPU-bound \cite{jesshope2006advances}.
 
 Segundo \citeonline{Orgerie2014}, o consumo de energia de recursos
 computacionais pode ser medido através de sensores de energia (gasto
-real) ou a partir de modelos (estimativa teórica). Algumas ferramentas
+real) ou a partir de modelos (estimativa teórica).
+#+latex: \review{Não se pode medir através de modelos, jamais! O máximo que tu podes fazer é estimar com modelos.}
+ Algumas ferramentas
 podem ser utilizadas para acessar esses sensores, um exemplo de
 ferramenta que permite obter uma relação do consumo de energia total
 gasto pela aplicação é a Intel PCM, fornecendo o consumo de energia
@@ -703,6 +740,10 @@ processador, esse framework possui dois módulos, o
 #+END_LaTeX
 permite que o usuário possa selecionar uma frequência específica.
 
+#+Latex: \review{Dizer também que frequentemente trabalhos que tentam economizar o consumo energético de aplicações o fazem comparando-se com os resultados de consumo obtidos com esses governors.}
+
+#+Latex: \review{Remover esses blocos latex, substituir por /texto/ (impossível de ler no emacs da forma como está).}
+
 * Trabalhos Relacionados
 \label{chapter.relatedwork}
 
@@ -781,6 +822,7 @@ amostras. Já para aplicações paralelas, como são executadas sobre
 diferentes fluxos de processamento, cada fluxo pode possuir um
 comportamento distinto de acordo com o balanceamento da carga da
 aplicação, até mesmo para mesmas regiões de código.
+#+Latex: \review{Citar trabalho que suporte essa última afirmação (estou curioso).}
 
 Além da abordagem de \citeonline{spiliopoulos2012power}, a qual é mais
 voltada para aplicações sequenciais, \citeonline{Poellabauer2005}
@@ -831,6 +873,7 @@ abordagem define blocos (
 #+BEGIN_LaTeX
  \textit{Basic blocks}
 #+END_LaTeX
+#+Latex: \review{blocos básicos é palavra reservada na computação: se refere aos blocos básicos definidos pelo compilador. Evitar usar esse termo se possível portanto, a menos que te refira a mesma coisa, o que não parece ser o caso.}
 ) que realizam operações comuns, depois dessa classificação é obtido
 as fases da aplicação que correspondem a junção desses blocos. Para
 cada bloco é definido o ganho desejado. O ganho é a melhor
@@ -937,8 +980,15 @@ analisando também o tempo em que o
  levado em consideração uma aplicação distribuída, o grão é o próprio
  nó de processamento.
 
+
+#+latex: \review{Falta uma motivação para o teu capítulo de proposta (que ainda não existe).}
+#+latex: \review{Baseado neste estado da arte, salientar qual a tua contribuição.}
 * Experimentos Preliminares
 \label{chapter.experiments} 
+
+#+latex: \review{Senti falta de um capítulo antes deste onde tu detalhas em duas páginas qual é a tua proposta. Nesse capítulo basicamente tu escreverás o que te mostrei com aquela figura que tirei a foto.}
+
+#+latex: \review{Ao entrar direto nos experimentos preliminares, claramente falta o capítulo de proposta, afinal isto é o texto de um projeto.}
 
 Os experimentos preliminares foram realizados com o objetivo de
 investigar em uma granularidade fina, pontos de execução da aplicação
@@ -1010,6 +1060,8 @@ fase de inicialização da aplicação.
 \end{figure}
 #+END_LaTeX
 
+#+Latex: \review{Como é calculada a taxa de cache misses? O que é o 100\%? Existe um teto? Acho que seria melhor se tu alterasse todos os gráficos e não colocasse porcentagem mas sim a quantidade efetiva de cache misses naquele período.}
+
 *** Lower-Upper Gauss-Seidel Solver (NPB-LU, B Class)
 
 A Figura \ref{fig.luExecution} apresenta a taxa de cache misses da L2
@@ -1054,11 +1106,13 @@ fim de obter a redução no consumo de energia.
 
 ** Overhead da Técnica
 
+\review{Sobrecarga}
+
 Para analisar o overhead do uso da biblioteca likwid \cite{psti} para
 monitorar o comportamento da aplicação foi realizado um experimento
 com as aplicações FT, CG e LU (NPB, Classe B), executadas com 1, 8,
 16, 24 e 32 threads. Os intervalos utilizados para amostragem foram
-50, 100, 150 e 200 milesegundos. Também, foram realizadas execuções com o uso
+50, 100, 150 e 200 milesegundos \review{!!}. Também, foram realizadas execuções com o uso
 da ferramenta likwid e outras execuções sem likwid. Dentre essas
 configurações, o experimento utilizou 30 replicações para cada
 configurações (fatores e valores), de maneira aleatória, a fim de evitar qualquer vício no
@@ -1075,6 +1129,10 @@ cada um com 8 cores físicos e tecnologia Hyper-Threading. Na Figura
 \label{fig.overhead} 
 \end{figure}
 #+END_LaTeX
+
+#+latex: \review{Sobrecarga em relação a que? Sem o likwid? Isso tu não fala explicitamente no texto, mas deveria.}
+
+#+Latex: \review{Como tu calculaste essas porcentagens? Falta a incerteza (standard error) desses experimentos para poder dizer que há diferença entre 50, 100, ... Onde estão os dados para eu calcular de maneira independente?}
 
 O gráfico de overhead para as três aplicações apresenta na maioria dos
 casos, um maior overhead com amostragem a cada 50 milisegundos. Em
@@ -1112,6 +1170,7 @@ DVFS (
 #+END_LaTeX
 ) para obter um consumo de energia nas fases mais memory-bound da
 aplicação.
+#+Latex: \review{Não fica claro que tua abordagem é mais "refinada" que as abordagens investigadas.}
 
 Os resultados preliminares apresentam que a metodologia e a ferramenta
 utilizada é capaz de identificar trechos de execução aonde a aplicação
